--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -1,10 +1,12 @@
 .login-container {
+  
   margin-top: 100px;
 }
 .loginCard {
-  background-color: black !important;
+  background-color: #0070b5 !important;
   width: 600px;
   padding: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
