--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,3 +1,17 @@
+.main-view {
+  background: #141414;
+  width: 100%;
+  display: inline-block;
+}
+
+.mainNavbar {
+  background: #162b48;
+}
+
+body {
+  font-family: "Teko", sans-serif !important;
+}
+
 .movie-view {
   margin-top: 100px;
   margin-bottom: 50px;
@@ -11,7 +25,7 @@
 }
 
 #title {
-  font-size: 30px;
+  font-size: 300px;
   font-weight: bold;
 }
 
